v0.13:

o Fixed the Hellanzb.CATEGORIZE_DEST option: it was impossible to
  disable in v0.12

o Fixed PostProcessor handling of filenames containing double quotes

o Fixed the following error triggered after failed yenc CRC checks:

  File "hellanzb-0.12/Hellanzb/NZBLeecher/ArticleDecoder.py", line 685,
          in assembleNZBFile
      decodedSegmentFile = open(nzbSegment.getDestination(), 'rb')
  exceptions.IOError: [Errno 2] No such file or directory: 

  This issue was introduced in v0.11.


v0.12:

o Fixed v3.newzbin.com's DirectNZB support which was broken as of
  2007-02-18

o Improved downloader performance (CPU used and max download speed),
  especially for faster connections (such as over 40mb/s)

o Added support for libnotify notifications (patch submitted by Ruben
  Fonseca)

o No longer hiding exceptions; many were previously only shown in the
  debug log file

o Now printing the 'Transferred MB in Time at Speed (Archive)' message
  when the NZB is finished downloading, as opposed to when the archive
  has finished decoding. The difference could be significant on slower
  CPUs/ and or faster connections


v0.11:

o Fixed the error:
  ImportError: cannot import name daemonize
  with Twisted 2.5

o Added the Hellanzb.CATEGORIZE_DEST option. Enabling it saves archives
  into a sub directory of DEST_DIR named after their newzbin.com
  category (when queued using the enqueuenewzbin XMLRPC call); e.g. Apps,
  Movies, Music

o enqueuenewzbin now downloads gzipped newzbin.com NZBs via the new v3
  DirectNZB interface (Thanks DBordello and Thomas Hurst)

o Added support for fillservers (by priority)

o Now requeueing segments to other servers when they fail yDecode CRC
  checks

o Added optional support for converting MacBinary files

o Now properly parsing v3.newzbin.com NZB names

o Fixed the enqueuenewzbin error:
  exceptions.AttributeError: 'module' object has no attribute 'b64encode'
  on Python 2.3
